Sat Dec 19 20:06:10 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* enc/windows_1250.c: Should not use C++ style comments (C99 feature).
	  [Bug #11843]

Sat Dec 19 17:17:04 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/utils.rb (WEBrick::Utils::TimeoutHandler#initialize):
	  use WEBrick::Utils::TimeoutHandler::Thread, which is ignored by
	  LeakChecker#find_threads, instead of ::Thread to get rid of
	  thread leak checker.  since this TimeoutHandler is resident
	  during tests because of Singleton, it waits for the next timeout
	  if it has any schedules.  in the case of nested timeouts, inner
	  timeout does not cancel outer timeouts and then those schedules
	  still remain.

Sat Dec 19 14:28:01 2015  Jake Worth  <jakeworth82@gmail.com>

	* ext/zlib/zlib.c (Init_zlib): [DOC] Fix double-word typo and
	  grammatical error.  [Fix GH-1162]

Sat Dec 19 14:23:59 2015  Jake Worth  <jakeworth82@gmail.com>

	* lib/csv.rb (CSV#initialize): [DOC] Fix double-word typo.
	  [Fix GH-1161]

Sat Dec 19 10:33:33 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_2.c, enc/windows_1250.c: separate Windows-1250
	  from ISO-8859-2 to fix 0x80..0x9e range (from Kimihito Matsui)

Fri Dec 18 21:26:54 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* lib/webrick/utils.rb (WEBrick::Utils::TimeoutHandler): To prevent
	  potential deadlocks, Queue is used to tell update of @timeout_info
	  instead of sleep and wakeup. [Bug #11742] [ruby-dev:49387]

Fri Dec 18 17:24:09 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (ibf_load_object_string): use fstring if frozen string.

Fri Dec 18 16:54:38 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_set_encoding): add StringIO's own
	  encoding and separate it from the buffer string to override the
	  encoding of string when reading.  [ruby-core:72189] [Bug #11827]
	  note that setting the encoding of its buffer string directly
	  without StringIO#set_encoding may cause unpredictable behavior.
